# FIRA-Air-Simulator

./: README.md
custom_teleop/src/: teleop_twist_keyboard.py
drone_construct/: CMakeLists.txt  package.xml
drone_construct/launch/: intro.launch  main.launch  put_drone_in_world.launch  start_world.launch
drone_construct/scripts/: fix.sh
drone_construct/worlds/: ardrone_test_world.world
drone_demo/src/: square_move.py
fira_challenge_env/: CMakeLists.txt  package.xml
fira_challenge_env/launch/: main.launch  technical_challenge.launch
fira_challenge_env/models/: H.dae  MainLeagueScene.blend
fira_challenge_env/script/: run.sh
fira_challenge_env/src/: model_update.py
fira_challenge_env/worlds/: challenge.world  main_league.world
gate_system/: CMakeLists.txt  package.xml
gate_system/config/: joint_names_gate_system.yaml
gate_system/launch/: display.launch  gazebo.launch
gate_system/meshes/: base_link.STL  rotating_link.STL
gate_system/src/: randomizer.py  start_spin.py
gate_system/urdf/: gate_system.csv  gate_system.urdf
sjtu_drone/launch/: challenge.launch  main.launch  simple.launch
sjtu_drone/src/: teleop_twist_keyboard.py
sjtu_drone/urdf/: sjtu_drone.urdf
