<package format="2">
  <name>gate_system</name>
  <version>1.0.0</version>
  <description>
    <p>FIRA AIR Simulation Competitions Gate System </p>
  </description>
  <author>FIRA AIR</author>
  <maintainer email="TODO@email.com" />
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roslaunch</depend>
  <depend>robot_state_publisher</depend>
  <depend>rviz</depend>
  <depend>joint_state_publisher_gui</depend>
  <depend>gazebo</depend>
  <export>
    <architecture_independent />
  </export>
</package>